# Scythe

./: .hgignore  CMakeLists.txt  Makefile  Makefile.depend  Makefile.sources  api.c  api.h  api_enum.h  api_type.h  assembler.c  assembler.h  basichash.c  basichash.h  basiclist.c  basiclist.h  binding.c  binding.h  bool.c  bool.h  char.c  char.h  charconv.c  charconv.h  chashtbl.c  chashtbl.h  compiler.c  compiler.h  core_subr.c  core_subr.h  doxygen.conf  earray.h  encoding.c  encoding.h  exception.c  exception.h  gloc.c  gloc.h  hash.c  hash.h  ibuffer.c  (+52 more)
cmake/: common.cmake  dump_build_info.cmake  gen_flymake.rb  run_cmake.sh
cmake/hooks/: gen_dir_locals.rb  gen_flymake.rb
lib/: CMakeLists.txt
lib/scythe/: repl.scm
lib/scythe/internal/: cmpl-env.scm  compile.scm  dynamic-env.scm  identifier.scm  macro.scm  misc.scm  multiple-val.scm  record.scm  syntax.scm
src/: CMakeLists.txt  Dependencies  Makefile  Makefile.depend  Makefile.sources  api.c  api.h  api_enum.h  api_type.h  assembler.c  assembler.h  bedrock.c  bignum.c  bignum.h  char.c  char.h  charconv.c  charconv.h  chashtbl.c  compile.c.in  compile.scm  compile_data.c  compile_data.c.in  compile_file.c  compiler.c  compiler.h  compiler.scm  compiler_code.h  compiler_data.c  compiler_data.c.in  config.h.in  core_modules.c  core_subr.c  core_subr.h  dynamic-env.scm  dynamic-env_data.c  dynamic-env_data.c.in  earray.c  earray.h  encoding.c  (+89 more)
src/include/scythe/: api.h  api_type.h  assembler.h  bedrock.h  bignum.h  char.h  chashtbl.h  compiler.h  compiler_code.h  compiler_code.h.in  config.h.in  core_modules.h  core_subr.h  earray.h  encoding.h  equivalence.h  exception.h  fcd.h  fcd_assembler.h  fcd_char.h  fcd_compiler.h  fcd_equivalence.h  fcd_exception.h  fcd_file.h  fcd_format.h  fcd_iseq.h  fcd_marshal.h  fcd_memory.h  fcd_miscobjects.h  fcd_module.h  fcd_number.h  fcd_pair.h  fcd_port.h  fcd_procedure.h  fcd_reference.h  fcd_refstk.h  fcd_scythe.h  fcd_string.h  fcd_symbol.h  fcd_syntax.h  (+33 more)
src/test/: Makefile  Makefile.depend  test_assembler.c  test_bignum.c  test_bool.c  test_char.c  test_charconv.c  test_chashtbl.c  test_compiler.c  test_eof.c  test_eval.c  test_eval_proc.c  test_fileport.c  test_iseq.c  test_memory.c  test_module.c  test_nil.c  test_pair.c  test_parser.c  test_string.c  test_string_ascii.c  test_string_eucjp.c  test_string_sjis.c  test_string_ucs4.c  test_string_utf8.c  test_stringport.c  test_symbol.c  test_undef.c  test_vector.c  test_vm.c
src/tools/: Makefile  scmcompile.rb
study/: hd.c  hd.h  isblank.c  ma.c  main.c
test/: Makefile  Makefile.depend  main.c  rakefile.rb  rakefile_helper.rb  run.sh  test_assembler.c  test_basichash.c  test_basiclist.c  test_bignum.c  test_binding.c  test_bool.c  test_char.c  test_charconv.c  test_chashtbl.c  test_compiler.c  test_eof.c  test_eval.c  test_eval_proc.c  test_fileport.c  test_hash.c  test_ibuffer.c  test_integer.c  test_iseq.c  test_lexer.c  test_memory.c  test_module.c  test_nil.c  test_pair.c  test_parser.c  test_pretty_print.c  test_string.c  test_string_ascii.c  test_string_eucjp.c  test_string_sjis.c  test_string_ucs4.c  test_string_utf8.c  test_stringport.c  test_symbol.c  test_ucs4.c  (+4 more)
test/unity/auto/: generate_unity_fixture_runner.rb  invoke_runner.rb  summarize_result.rb
test/unity/src/: Makefile  Makefile.depend  Makefile.sources
test/unity/targets/: gcc_64.yml
test/ut/: CMakeLists.txt  Makefile  Makefile.depend  Makefile.sources  test.c  test.h  test_api.c  test_api_assembler.c  test_api_bignum.c  test_api_booleans.c  test_api_characters.c  test_api_equivalence.c  test_api_exceptions.c  test_api_fixnum.c  test_api_format.c  test_api_input.c  test_api_module.c  test_api_nil.c  test_api_output.c  test_api_pair_and_lists.c  test_api_ports.c  test_api_strings.c  test_api_symbols.c  test_api_undef.c  test_api_vectors.c  test_assembler.c  test_bedrock.c  test_bignum.c  test_boolean.c  test_booleans.c  test_char.c  test_characters.c  test_charconv.c  test_chashtbl.c  test_compile.c  test_compile_data.c  test_compiler.c  test_compiler_data.c  test_core_modules.c  test_core_subr.c  (+75 more)
tools/: gen-src-pkg.sh
